Added network status icons
